Prevent wrap on phone screen

--- a/components/UI/Checkbox/Checkbox.module.css
+++ b/components/UI/Checkbox/Checkbox.module.css
@@ -1,7 +1,7 @@
 .checkbox {
     --checkbox-color: #3c4669;
     position: relative;
-    display: inline-flex;
+    display: flex;
     align-items: baseline;
     font-size: 1em;
     cursor: pointer;
